--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="register">Register</string>
     <string name="music">Music</string>
     <string name="movie_genre">Movie</string>
+    <string name="title_activity_forgot_password">ForgotPassword</string>
 
 </resources>
